@@ -184,6 +184,21 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.6</version>
+				<inherited>true</inherited>
+				<configuration>
+					<argLine>-Xmx1536m -XX:MaxPermSize=384m -Djava.awt.headless=true</argLine>
+					<systemPropertyVariables>
+						<property>
+							<name>java.awt.headless</name>
+							<value>true</value>
+						</property>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
 						<goals>deploy</goals>
